--- a/MoreCoffee/Views/EditCoffeePage.xaml
+++ b/MoreCoffee/Views/EditCoffeePage.xaml
@@ -18,6 +18,13 @@
                     Command="{Binding SaveCoffeeCommand}"
                     HorizontalOptions="Center"
                     Margin="0,20,0,0" />
+            
+            <Button Text="Delete" 
+                    Command="{Binding DeleteCoffeeCommand}"
+                    HorizontalOptions="Center"
+                    BackgroundColor="Red"
+                    TextColor="White"
+                    Margin="0,10,0,0" />
         </VerticalStackLayout>
     </ContentPage.Content>
 </ContentPage>
